<resources>
    <string name="app_name">Mini Snake</string>
    <string name="mode_ready">New Start\nSwipe Up To Play</string>
    <string name="mode_pause">Paused\nSwipe Up To Resume</string>
    <string name="mode_lose_prefix">Game Over\nScore: </string>
    <string name="mode_lose_suffix">\nSwipe Up To Play</string>
    <string name="snake_layout_text_text"></string>
    <string name="unitid1">ca-app-pub-8505828987629407/5092962085</string>
    <string name="unitid2">ca-app-pub-8505828987629407/2200039580</string>
    <string name="banner_ad_unitID">ca-app-pub-8505828987629407/5519477695</string>
    <string name="default_score">0</string>
    <string name="text_score">eat</string>
    <string name="text_lvlN">Normal</string>
    <string name="text_lvlM">Medium</string>
    <string name="text_lvlH">Hard</string>
    <string name="text_lvlCh">Choose Level</string>
    <string name="text_end">Are you sure will end the game?</string>
    <string name="text_exit">Are you sure will exit?</string>
    <string name="version">Version 1.1.2</string>
</resources>
