<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.getaufansepta.snake.activity.SnakeLvel"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/minisnakeicon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_lvlCh"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#26ac6a"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_lvlN"
            android:id="@+id/txtlvlN"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#FBBC09"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_lvlM"
            android:id="@+id/txtlvlM"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#FBBC09"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_lvlH"
            android:id="@+id/txtlvlH"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#FBBC09"/>
    </LinearLayout>
</RelativeLayout>
