<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.wordpress.getaufansepta.snake.activity.Snake">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearbox">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#26ac6a"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/minisnakeicon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_score"
                android:paddingLeft="0dp"
                android:fontFamily="casual"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:src="@drawable/orange"
                android:paddingLeft="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score"
                android:id="@+id/txtscore"
                android:paddingLeft="3dp"
                android:fontFamily="casual"
                android:textStyle="bold"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#26ac6a">
            <com.wordpress.getaufansepta.snake.core.SnakeView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/snake"
                app:tileSize="24" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/text"
                    android:text="@string/snake_layout_text_text"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FBBC09"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    android:textSize="24dp"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>